--- a/src/index.css
+++ b/src/index.css
@@ -223,7 +223,7 @@ ul {
 
 button[disabled] {
     opacity: 0.4;
-    cursor: not-allowed;
+    cursor: not-allowed !important;
 }
 
 .loading {
@@ -252,6 +252,8 @@ button[disabled] {
 }
 
 .button {
+    display: block;
+    cursor: pointer;
     border-radius: 4px;
     padding: 9px 22px;
     font-size: 22px;
