--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,3 @@
-:root {
-    --black: #000;
-    --white: #fff;
-    --yellow: #f4f73e;
-}
-
 * {
     font-family: 'Noah', Avenir, sans-serif;
 }
@@ -19,7 +13,7 @@ h1 {
 }
 
 main {
-    max-width: 500px;
+    max-width: 1000px;
     margin: 0 auto;
 }
 
@@ -36,126 +30,7 @@ main > button {
     transition: 0.15s all;
 }
 
-main > button:focus {
-    outline: none;
-    box-shadow: 0 0 10px #5100e5;
-}
-
-main > button:active {
-    transform: scale(0.9);
-}
-
-li {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-}
-
-.pet {
-    display: flex;
-    flex-direction: column;
-    flex: 1;
-    align-items: center;
-    position: relative;
-}
-
-.pet:hover img {
-    opacity: 0.5;
-}
-
-.pet-name {
-    font-size: 24px;
-    color: #250068;
-    background: transparent;
-    border: none;
-    cursor: pointer;
-}
-
-.pet-name:focus {
-    outline: none;
-    box-shadow: 0 2px 0 #4907bf33;
-}
-
-.pet .adopt-btn {
-    display: none;
-}
-
-.pet:hover .adopt-btn {
-    position: absolute;
-    top: -5px;
-    right: 40px;
-    border: none;
-    border-radius: 50%;
-    width: 30px;
-    height: 30px;
-    font-size: 20px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    line-height: 1em;
-    box-shadow: 0 0 2px #673ab7;
-    cursor: pointer;
-    padding-left: 10px;
-    padding-top: 4px;
-}
-
-.pet .adopt-btn:focus {
-    outline: none;
-    box-shadow: 0 0 7px #673ab7;
-}
-
-.pet .adopt-btn:active {
-    transform: scale(0.9);
-}
-
-.edit-btn {
-    display: none;
-}
-
-.pet > img,
-.pet > .no-photo {
-    margin-bottom: 15px;
-}
-
-.no-photo {
-    width: 150px;
-    height: 150px;
-    background: #fff;
-    border-radius: 50%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 82px;
-    font-weight: bold;
-    color: #4907bf33;
-}
-
-.pet-kind {
-    font-size: 12px;
-    opacity: 0.7;
-    position: absolute;
-    top: 0px;
-    left: 47px;
-    transform: rotate(-40deg);
-}
-
-ul {
-    margin: 0;
-    padding: 0;
-    display: grid;
-    grid-template-columns: repeat(2, minmax(150px, 1fr));
-    grid-row-gap: 40px;
-    margin: 0 30px;
-    margin-bottom: 30px;
-}
-
-.pet-photo.sm {
-    width: 150px;
-    height: 150px;
-    border-radius: 50%;
-}
-
-.pet-form {
+.item-form {
     display: grid;
     grid-template-columns: calc(50% - 25px) calc(
       50% - 25px
@@ -164,30 +39,30 @@ ul {
     /* flex-direction: column; */
 }
 
-.pet-form input,
-.pet-form select {
+.item-form input,
+.item-form select {
     font-size: 20px;
     padding: 5px 5px;
     grid-column: 1 / 3;
     margin-bottom: 15px;
 }
 
-.pet-form label {
+.item-form label {
     font-weight: bold;
     font-size: 14px;
     margin-bottom: 3px;
     grid-column: 1 / 3;
 }
 
-.pet-form img {
-    width: 150px;
-    height: 150px;
-    border-radius: 50%;
-    grid-column: 1 / 3;
-    margin: 0 auto;
-}
+/*.pet-form img {*/
+/*    width: 150px;*/
+/*    height: 150px;*/
+/*    border-radius: 50%;*/
+/*    grid-column: 1 / 3;*/
+/*    margin: 0 auto;*/
+/*}*/
 
-.pet-form button {
+.item-form button {
     display: block;
     margin-right: auto;
     border-radius: 4px;
@@ -198,21 +73,14 @@ ul {
     border: none;
 }
 
-.pet-form button + button {
+.item-form button + button {
     font-weight: bold;
     margin-right: initial;
     background: #5100e5;
 }
 
-.pet-form input[type='file'] {
+.item-form input[type='file'] {
     font-size: initial;
-}
-
-.pet-form .error {
-    grid-column: 1 / 3;
-    margin-top: -0.8em;
-    margin-bottom: 0.8em;
-    color: red;
 }
 
 .loading {
@@ -256,7 +124,7 @@ button[disabled] {
     cursor: pointer;
     border-radius: 4px;
     padding: 9px 22px;
-    font-size: 22px;
+    font-size: 15px;
     font-weight: bold;
     background: #5100e5;
     color: #fff;
@@ -268,7 +136,7 @@ button[disabled] {
     display: grid;
     grid-gap: 20px;
     border: 10px solid var(--yellow);
-    grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     padding: 10px;
 }
 
@@ -311,4 +179,9 @@ button[disabled] {
     -webkit-transform: rotate(-45deg) scale(0.75, 1);
     z-index: 10;
     cursor: not-allowed;
+}
+
+.actionButton {
+    display: flex;
+    gap: 20px;
 }
