--- a/src/index.css
+++ b/src/index.css
@@ -123,7 +123,7 @@ button[disabled] {
     display: block;
     cursor: pointer;
     border-radius: 4px;
-    padding: 9px 22px;
+    padding: 2px;
     font-size: 15px;
     font-weight: bold;
     background: #5100e5;
@@ -184,4 +184,8 @@ button[disabled] {
 .actionButton {
     display: flex;
     gap: 20px;
+}
+
+.selectable {
+    cursor: not-allowed;
 }
